--- a/platform/minamifunabashi_4.css
+++ b/platform/minamifunabashi_4.css
@@ -140,7 +140,7 @@ svg {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/81b22013-dfda-4de9-9698-ff1932f44a3a.%E9%A7%85%E5%90%8D%E6%A8%99_%E5%8D%97%E8%88%B9%E6%A9%8B%20(1).png?v=1745327126674"); /* 指定画像を挿入 */
+  background-image: url("https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/駅名標_南船橋 (3).png"); /* 指定画像を挿入 */
   background-size: cover;
   background-position: center;
   opacity: 0.3; /* 透明度を調整（0.0～1.0） */
@@ -335,4 +335,8 @@ svg {
 
 .melody {
   display: flex;
+}
+
+select {
+  margin-left: 20px;
 }
