--- a/station/minamifunabashi.css
+++ b/station/minamifunabashi.css
@@ -114,7 +114,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/0025f5c8-4910-40cb-93ea-735bb98add74.%E9%A7%85%E5%90%8D%E6%A8%99_%E5%8D%97%E8%88%B9%E6%A9%8B.png?v=1745326735561"); /* 指定画像を挿入 */
+  background-image: url("https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/駅名標_南船橋.png"); /* 指定画像を挿入 */
   background-size: cover;
   background-position: center;
   opacity: 0.3; /* 透明度を調整（0.0～1.0） */
