--- a/station/kemigawahama.css
+++ b/station/kemigawahama.css
@@ -114,7 +114,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/5aed764c-b888-4a49-92d2-3127f4d2705c.%E9%A7%85%E5%90%8D%E6%A8%99_%E6%A4%9C%E8%A6%8B%E5%B7%9D%E6%B5%9C.png?v=1746949257696"); /* 指定画像を挿入 */
+  background-image: url("https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/駅名標_検見川浜.png"); /* 指定画像を挿入 */
   background-size: cover;
   background-position: center;
   opacity: 0.3; /* 透明度を調整（0.0～1.0） */
