--- a/line/keiyo.css
+++ b/line/keiyo.css
@@ -114,7 +114,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/255%20%E8%91%9B%E8%A5%BF%E8%87%A8%E6%B5%B7%E5%85%AC%E5%9C%92.JPG?v=1743571658529"); /* 指定画像を挿入 */
+  background-image: url("https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/京葉線.jpg"); /* 指定画像を挿入 */
   background-size: cover;
   background-position: center;
   opacity: 0.3; /* 透明度を調整（0.0～1.0） */
